<resources>
    <string name="app_name">ProblemBank</string>

    <string name="default_web_client_id" translatable="false">875045166448-stmrcej921cj0vpvv03culogo8gne3l7.apps.googleusercontent.com</string>


    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_editor">EditorActivity</string>
    <string name="default_notification_channel_id">ProblemChannel</string>
    <string name="title_activity_board">BoardActivity</string>
    <string name="action_run">Run</string>
    <string name="action_save">Save</string>
</resources>
