<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_run"
        android:orderInCategory="100"
        android:title="@string/action_run"
        android:icon="@drawable/ic_play_arrow"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_save"
        android:orderInCategory="200"
        android:title="@string/action_save"
        android:icon="@drawable/ic_save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="300"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never" />
</menu>
